[gd_scene load_steps=9 format=2]

[ext_resource path="res://BOBOHEI-2.otf" type="DynamicFontData" id=1]
[ext_resource path="res://interface_btn_theme.tres" type="Theme" id=2]
[ext_resource path="res://interface.gd" type="Script" id=3]
[ext_resource path="res://Asset/Object/Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Grid_Btn.gd" type="Script" id=5]
[ext_resource path="res://Asset/Object/Effect.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=2]
size = 49
outline_size = 5
outline_color = Color( 0.266667, 0, 0.411765, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
outline_color = Color( 1, 0.109804, 0.0156863, 1 )
font_data = ExtResource( 1 )

[node name="interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -179.0
margin_right = 269.0
margin_bottom = 333.0
columns = 4

[node name="Element" type="Button" parent="GridContainer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 126.0
margin_bottom = 122.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element2" type="Button" parent="GridContainer"]
margin_left = 141.0
margin_top = 2.0
margin_right = 261.0
margin_bottom = 122.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element3" type="Button" parent="GridContainer"]
margin_left = 276.0
margin_top = 2.0
margin_right = 396.0
margin_bottom = 122.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element4" type="Button" parent="GridContainer"]
margin_left = 411.0
margin_top = 2.0
margin_right = 531.0
margin_bottom = 122.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element5" type="Button" parent="GridContainer"]
margin_left = 6.0
margin_top = 131.0
margin_right = 126.0
margin_bottom = 251.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element6" type="Button" parent="GridContainer"]
margin_left = 141.0
margin_top = 131.0
margin_right = 261.0
margin_bottom = 251.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element7" type="Button" parent="GridContainer"]
margin_left = 276.0
margin_top = 131.0
margin_right = 396.0
margin_bottom = 251.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element8" type="Button" parent="GridContainer"]
margin_left = 411.0
margin_top = 131.0
margin_right = 531.0
margin_bottom = 251.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element9" type="Button" parent="GridContainer"]
margin_left = 6.0
margin_top = 260.0
margin_right = 126.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element10" type="Button" parent="GridContainer"]
margin_left = 141.0
margin_top = 260.0
margin_right = 261.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element11" type="Button" parent="GridContainer"]
margin_left = 276.0
margin_top = 260.0
margin_right = 396.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element12" type="Button" parent="GridContainer"]
margin_left = 411.0
margin_top = 260.0
margin_right = 531.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element13" type="Button" parent="GridContainer"]
margin_left = 6.0
margin_top = 389.0
margin_right = 126.0
margin_bottom = 509.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element14" type="Button" parent="GridContainer"]
margin_left = 141.0
margin_top = 389.0
margin_right = 261.0
margin_bottom = 509.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element15" type="Button" parent="GridContainer"]
margin_left = 276.0
margin_top = 389.0
margin_right = 396.0
margin_bottom = 509.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="Element16" type="Button" parent="GridContainer"]
margin_left = 411.0
margin_top = 389.0
margin_right = 531.0
margin_bottom = 509.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "00"
icon_align = 1
script = ExtResource( 5 )

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.0
margin_top = 115.0
margin_right = 113.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 3 )
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_top = 15.0
margin_right = 285.0
margin_bottom = 15.0

[node name="MissLabel" type="Label" parent="MarginContainer"]
margin_right = 570.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "当前："

[node name="RemainLabel" type="Label" parent="MarginContainer"]
margin_right = 570.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "剩余："
align = 2

[node name="Timer" type="Timer" parent="."]

[node name="Transition" parent="." instance=ExtResource( 4 )]
margin_right = -456.0
margin_bottom = -669.0

[node name="Effect" parent="." instance=ExtResource( 6 )]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 491, 145 )
